<resources>
    <string name="app_name">JobsToGo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">The goal of this software is to offer different types of jobs to people who are looking for a short-term employment like carrying furniture, mowing, tutoring etc. in their spare time. One of the ideas behind this app, to help people who lost their jobs due to the Covid-19 pandemic. Furthermore, this app also offers ordinary work opportunities, such as full-time and part-time. As well individuals as companies can benefit from this software.
Additionally, we extend our app with a marketplace which is especially intended for private users.</string>
    <string name="jobs_to_go">Jobs To Go</string>
    <string name="earth">earth</string>
    <string name="login">login</string>
    <string name="register1">register</string>
    <string name="password">Password</string>
    <string name="no_of_attempts_remaining">No of attempts remaining:</string>
    <string name="email_address">Email Address</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
</resources>